@@ -1,5 +1,8 @@
 2008-02-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* conf/FindAce.cmake: fix broken case where ace library not found
+	on windows.
+
 	* src/libYARP_dev/src/opencv_grabber/default/yarp/OpenCVGrabber.cpp: 
 	applied patch from Stefan Freyr Stefansson to use camera index
 	if one is specified.
